Revision history for Fork-Event-Interval

0.03 xxx
        - removed restart(), and aliased it instead to start()

0.02    2016-09-24
        - POD fixes

0.01    Date/time
        First version, released on an unsuspecting world.
